# tj-data-worker

./: .env-sample  .gitignore  Dockerfile  README.md  azure-ci-pipeline-gated.yml  azure-deploy-pipeline.yml  azuredeploy.json  docker-compose.yml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
tests/: conftest.py
tests/swap_etl/: test_etl.py
tests/swap_getter/: test_updater.py
tests/swap_updater/: test_run_loop.py
tj_worker/: main.py
tj_worker/model/: blocks.py  pairs.py  swaps.py  tokens.py  transactions.py
tj_worker/swap_etl/: __init__.py  maintain_block_swaps.py  maintain_pair_tokens.py  whitelist_tokens.py
tj_worker/swap_getter/: __init__.py  swaps_to_csv.py  thegraph.py  upload_data.py
tj_worker/swap_updater/: __init__.py  parse_data.py  thegraph.py  upload_data.py
tj_worker/utils/: azure_storage.py  csv_functions.py  data_classes.py  db.py  db_functions.py  log.py  settings.py
