[metadata]
name = tj_worker
version = 1.0.0
maintainer = thomas
maintainer_email = tvhiggins@gmail.com
description = Basic worker to pull traderjoe data
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    tj_worker

[flake8]
max-line-length = 119
max-complexity = 20
# Ignore imported but unused for __init__.py files
per-file-ignores = __init__.py:F401
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv,venv